Fixed styles on smaller screens

--- a/src/global.scss
+++ b/src/global.scss
@@ -8,6 +8,7 @@ body {
 	margin: 0;
 	background-color: #121212;
 	color: #e4e4e4;
+	overflow: hidden;
 }
 
 i {
