--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -5,6 +5,7 @@ $button-bg: #323232;
 	text-align: center;
 	height: 100vh;
 	box-sizing: border-box;
+	overflow: hidden;
 }
 
 .headerContainer {
@@ -14,6 +15,10 @@ $button-bg: #323232;
 	-webkit-line-clamp: 2;
 	-webkit-box-orient: vertical;
 	margin-bottom: 30px;
+
+	@media screen and (max-height: 630px) {
+		display: none
+	}
 }
 
 .header {
@@ -46,6 +51,10 @@ $button-bg: #323232;
 
 .close {
 	padding-bottom: 42px;
+
+	@media screen and (max-height: 655px) {
+		padding-bottom: 32px;
+	}
 }
 
 .closeButton {
@@ -57,12 +66,16 @@ $button-bg: #323232;
 	display: flex;
 	padding-top: 24px;
 	padding-bottom: 32px;
+
+	@media screen and (max-height: 655px) {
+		padding-bottom: 28px;
+	}
 }
 
 .playButtonContainer {
 	display: inline-block;
 	width: 50%;
-	padding-top: 32px;
+	padding-top: 18px;
 }
 
 .playButton {
@@ -95,10 +108,18 @@ $button-bg: #323232;
 
 .fwdRwdContainer {
 	padding-bottom: 32px;
+
+	@media screen and (max-height: 655px) {
+		padding-bottom: 28px;
+	}
 }
 
 .volumeBtnContainer {
 	padding-bottom: 24px;
+
+	@media screen and (max-height: 655px) {
+		padding-bottom: 18px;
+	}
 }
 
 .volumeButton {
@@ -108,8 +129,11 @@ $button-bg: #323232;
 }
 
 .volumeSliderContainer {
-	padding-left: 12px;
-	padding-right: 12px;
+	padding: 0 12px 18px;
+
+	@media screen and (max-height: 655px) {
+		padding-bottom: 12px;
+	}
 }
 
 .volumeSlider {
